[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "k-snap"
version = "1.0.0"
description = "A space-efficient K8s object history recorder and browser using Delta snapshots."
authors = [
  { name="Manvendra" }
]
dependencies = [
    "pyyaml>=6.0",
]
requires-python = ">=3.6"

[project.scripts]
ksnap = "ksnap:main"
